--- a/Presentation/app/public/manifest.json
+++ b/Presentation/app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Winged Code",
+  "name": "Code with wings",
   "icons": [
     {
       "src": "favicon.ico",
