--- a/Presentation/app/tsconfig.json
+++ b/Presentation/app/tsconfig.json
@@ -17,7 +17,8 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "node_modules",
