--- a/Presentation/app/package.json
+++ b/Presentation/app/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.5.1",
+    "@material-ui/icons": "^2.0.3",
     "firebase": "^5.2.0",
     "firestore": "^1.1.6",
-    "material-ui": "^1.0.0-beta.44",
-    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0"
   },
   "scripts": {
@@ -22,8 +22,8 @@
     "@types/jest": "^23.1.3",
     "@types/node": "^10.5.1",
     "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-router-dom": "^4.2.6",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-router-dom": "^4.3.0",
     "typescript": "^2.9.2"
   }
 }
